fix color in dark mode

--- a/src/components/Professionals/Professionals.scss
+++ b/src/components/Professionals/Professionals.scss
@@ -5,7 +5,7 @@
         font-weight: 400;
         text-align: center;
         line-height: 33px;
-        color: rgba(0, 0, 0, 0.5);
+        color: $summary-color;
     }
     p {
         margin-bottom: 10px;
